# LocalRAG

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
local_rag/: __init__.py  cli.py  config.py  version_manager.py
local_rag/chunker/: __init__.py  semantic_chunker.py  text_chunker.py
local_rag/cleaner/: __init__.py
local_rag/eval/: __init__.py  faithfulness.py  recall.py
local_rag/loader/: __init__.py  docx_loader.py  markdown_loader.py  pdf_loader.py  txt_loader.py
local_rag/qa/: __init__.py  chain.py  prompt.py
local_rag/retrieval/: __init__.py  bm25_retriever.py  hybrid_retriever.py
local_rag/utils/: __init__.py  dedup.py  file_utils.py  logger.py
local_rag/vector_store/: __init__.py  chroma_store.py
local_rag/web/: __init__.py  app.py
local_rag/web/components/: __init__.py  chat.py  sidebar.py  upload.py
local_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_chunker.py  test_cleaner.py  test_dedup.py  test_eval.py  test_integration.py  test_loader.py  test_qa.py  test_retrieval.py  test_vector_store.py  test_version_manager.py  test_web.py
